Fixed CSS bugs in dark mode

--- a/stylesheets/common.css
+++ b/stylesheets/common.css
@@ -182,8 +182,6 @@ bottomitem img {
   
   body {
     background-color: #2f2f2f;
-    font-family: Arial;
-    margin-bottom: 110px;
   }
   
 }
